@@ -229,7 +229,7 @@ void add_packetizer_globally(generic_packetizer_c *packetizer);
 void add_tags(KaxTag *tags);
 
 void create_next_output_file();
-int64_t finish_file(bool last_file = false);
+void finish_file(bool last_file, bool create_new_file = false, bool previously_discarding = false);
 void rerender_track_headers();
 void rerender_ebml_head();
 std::string create_output_name();
