@@ -204,7 +204,7 @@ T_355chapters:47e917b029d18abc6676c9abef5c0ded-74bd51e192c5c7a99da935c4b993badc-
 T_356tags:4f2cf9f4181808220a9a6a6d7b70f1c6-59578a228c941903b9ae1aa46a2d464d-f1549d570d165fadbcd013042e96e755-130e5e2635d2072b71505340958d0e60-05fb17ffccc54721fe6462c723cecc4e-ok-ok-ok-ok-ok-ok-ok-ok-ok-ok-ok-ok-ok:passed:20120324-121752:0.430471559
 T_357segment_info:8fd3bb9c42490a8b7dd1ae0bf06288bd-bcad09e97a98ecb1d330d69e4c35a54d-ok-ok-ok-ok-ok-ok-ok:passed:20120324-122844:0.227807646
 T_358usf:07118fa4b5f8d7d63f4612544a2b1b75:passed:20120329-142144:0.051754089
-T_359split_parts:14add8af7d016c048f0828708af04a86+c787a3d20fe2c26f7e0e0311f955a281+ok-e45e8371d819ccaa5c369c7060a3d646+ok-dac8e8500c582b658a28442873e43af1+ok-a44d973bca7503f6ce3eaecca60ba6bc+3145ceb7e2ee078b3e3ee0ee3537c25a+16bd445438312debe79fdc8f97aa913d+3f30d2f84eabe6a3ddf4b96249dd7409+cc46b789f5f093cd2c5262fd6e00c270+e147dd02086aa75d3dbb1d331c62e2b7+27b895b36e428126dd567be16c9777b5+ok-06ffb1c503836a0a6236bc8a3041b1e1+ok-8d7f1251df8bb2e5a00bdae80bcc6acf+ok:passed:20120331-133448:2.321768368
+T_359split_parts:14add8af7d016c048f0828708af04a86+c787a3d20fe2c26f7e0e0311f955a281+ok-e45e8371d819ccaa5c369c7060a3d646+ok-dac8e8500c582b658a28442873e43af1+ok-a44d973bca7503f6ce3eaecca60ba6bc+3145ceb7e2ee078b3e3ee0ee3537c25a+16bd445438312debe79fdc8f97aa913d+3f30d2f84eabe6a3ddf4b96249dd7409+cc46b789f5f093cd2c5262fd6e00c270+e147dd02086aa75d3dbb1d331c62e2b7+3c2a7c2fa92df422a28a3bad9b155184+ok-06ffb1c503836a0a6236bc8a3041b1e1+ok-8d7f1251df8bb2e5a00bdae80bcc6acf+ok:passed:20120331-133448:2.321768368
 T_360X_chapters_hex_format:0637a4864b492106116e3ec7733c5118-3853793b0d88fc10efadb146ca948833:passed:20120404-152038:0.047282116
 T_361file_concatenation:4051dcbcddbde799e7f93b4bb3617897-be498d7d29a3fbe5f2efb2f4a5e9b133-be498d7d29a3fbe5f2efb2f4a5e9b133-3af2f60c860060bee56fc18d62632c0d-3af2f60c860060bee56fc18d62632c0d-3af2f60c860060bee56fc18d62632c0d-b96575ae032a25eb62652e460cf54361-0408ae98a65d899f9d62e3f4f44e385b-eefe88fddc659b50fe075fa0548c8752-eefe88fddc659b50fe075fa0548c8752-eefe88fddc659b50fe075fa0548c8752-eefe88fddc659b50fe075fa0548c8752-bf53818a8c55c98b7d2c86bac06b72ca-67a59c4960f092526c09d18c032201bf-42becd5ba99200b3c859e51b21e0fb12-42becd5ba99200b3c859e51b21e0fb12:passed:20120406-144928:18.646532342
 T_362xtr_avc:1fbfce7cde19310d1b03f90b06cdd29f-ce680f3ae594f3842b638dcb2949e220:passed:20120416-153515:1.811589633
@@ -227,9 +227,10 @@ T_378deprecated_iso_639_2_codes:hrv+rum+srp-0270a2ad78e5881e406a770709e8393d:pas
 T_379flv:410991a66702a9c085e79a08a7c12a34-8c53cc6b896ff2f158c9273d7f453e91-f4a3b97a857c48afa75a79457ebbab70-8c53cc6b896ff2f158c9273d7f453e91-df2420dab0717518124168646c670ffc-e3cdbe4c0713d03fd9e50e56b35ba3af-87303ffc0dc8e2f4c299f8b5574ca1cc-e3cdbe4c0713d03fd9e50e56b35ba3af-8243554b2913f5d4cc61ecae31b4367c-3c4fe6adc09ccc54a92fc570a7a679ed-efbe31f64bccfbaa68f345578a2dca21-3c4fe6adc09ccc54a92fc570a7a679ed:passed:20121223-134722:1.700533979
 T_380split_frames:a632ff2e05d6f68afdee293f57d607f0+376c161d93e8c2a0c5021c0729d8896c+ok-a632ff2e05d6f68afdee293f57d607f0+376c161d93e8c2a0c5021c0729d8896c+ok-a632ff2e05d6f68afdee293f57d607f0+376c161d93e8c2a0c5021c0729d8896c+ok:passed:20121223-232902:1.685037717
 T_381X_alac:bf27f11ef2cc46c8490fe6ecfbc9d47c-ed3dd47220947f8130974268f0af281d:passed:20121225-133740:0.075635313
-T_382split_chapters:352a6c27ffc26565b45c8d3c014a18aa+be25f966d8d05465491385a420cd1f9b+ok-e09092b9b0f3e8b370f1a4b741fe8539+03badbdab502b87e0f323e486e0cf40c+ok-0ec4a1de0fb74fc5924439245dd48267+4fb8cfcbefde6256464d2c2f5422e926+19d72aca3ea4267fdbb0c685f3a807a5+6a1598fcf8286bf6a18d9a5b0da44ea7+1b098adad89cf106aa7a7ff7ed85faba+8d7d5c1cb47a9f1bbdbbd34336251947+1018f6b30b3d610f27482408a1d2e209+e7db2fc928d431accfc426e2a716e4a9+5e26b821afb4f7091d71164dfb3106f3+82c85375d465486a288a144ed88343c2+eacf9cdf018cd1e334da2450929d9497+ec2af2541adbee9e24d8058f5d15ed70+a0a7c8ed361294e1326130c3fccc3e36+ce0bb503534f00e454f51ebc883afa4f+8d2ed3e7a632d9c6ac948f157c3753b3+d653a17ba7d0448549e3019e2da03d1e+8db5db08e53b7e72ecd64689fa2fdf50+ok-de4f62f696ad97032645248dc401d59f+3946ed32564f5a269935835734396341+74886de816bc98c7ac2ba7d48288e7ca+6ad323bcf3b392129c1e8ea9d3cbf3d7+7f220ae5a4fe9b1c837f9078a0cf3648+4db726777694397bd9a606f3120c8a4b+e1c0df9d1716b406cab866ddf5518ce3+2439a94e258047a36141a77d94876002+ac69a10174e80fabeb412231f11b3f53+70b9f25ff48423fb3adad372edc9abd8+23e771db8b2505c16a8c9eac42ea1119+774089c52b37fd31bc7858762051de75+2a3f668f947f0add929d887ae7caf032+96e857a44a6674d4a985cf21f9053c35+96e62109ad173b219422765def88759f+2df1b1666e689581dd412c8b092fe568+83e5e7ed87bc4010c12b4afe3f3da858+ok:passed:20121227-202501:1.734270221
+T_382split_chapters:a1e1d6d41c92be09d9a95fe5764114b7+be25f966d8d05465491385a420cd1f9b+ok-5c5af0dc62b3b89b82200f6403df0221+03badbdab502b87e0f323e486e0cf40c+ok-bb74964c4b506354644b44b9b708459b+ccb2820f7eaea1b7b8f6ce5dfaa49a42+5f173df7cac05e7f3b1e011f7ac11c37+9bbdb9c0a1bd8998b5a5f319f43b4467+cdb5fb3c0fca831197790d34ed6051e0+7df76b63982a52395ea60aefba868b0f+d1c79114e56bce7d0f94a46959f1b798+83d8ba0b23b5164dc0d77addf918d72b+cc793dee16a6f415140ee517362523c5+c185c1db2311b6f5c2c20a70c918b4c9+84c2b1d17b46f649d4403e656288eb86+f1cb9f095909589e8e2c1b9d9f4266ba+fa86a16643a67f1a26b907e6e8d429ff+d83eb854a21979dfaa76a6f02436988b+226d9e0318f4fbb1af2acad99f5213ab+cebbf300ffc6c4e9675c253263c5a1b3+8db5db08e53b7e72ecd64689fa2fdf50+ok-a0a9fcdf9234e441431adfbfb15fa3d2+b6a144bb30ebda343a565c8fc1c17d2f+3c38dc04b91ed7bf4e195171fe20c0ec+738438b9af0aa90ce250a8fa5948a27f+c8cd8d14108225c6035287f59b8b7c1f+365ca25d0630f39ab1bb784be80161d0+e04058a47d1fe4b21653345378e05f83+f9f471aa386cb71771c4c5baa5a9a13b+3c54e9aa549b7c04e47f9882fbe4357b+67cd66a1bbda95076d170471a63e2226+3aa7ea3e4c789333cdd1cdc134fbdce0+2098a443072d065de3ca840e811292a6+602aa1427e34c48d3e4cbc3aa6c180c8+81e0bfe6a1318600a97e45f3401ee324+ffa3e446fd733d2623dd8b46d5bac0f9+7820d04ee09e1cb883e3eafd467367f5+83e5e7ed87bc4010c12b4afe3f3da858+ok:passed:20121227-202501:1.734270221
 T_383mp4_text_track_subtitles:76381141faab5737c5001b042d4b6235:passed:20121228-231519:0.102549441
 T_384vobsub_in_mp4:62fd55de5e9ce07925d710395971a7ae:passed:20130112-201109:0.674617717
 T_385split_parts_frames:14add8af7d016c048f0828708af04a86+c787a3d20fe2c26f7e0e0311f955a281+ok-e1001084ce3512e9dc8940d4c9ade87d+ok-d1c052f274338865a10c8ac6bbd1d1a3+ok-a4401edb1f7c56909267babaaa0e252b+ok-5eaaeb9e142363b1d3abff097b8a93c6+ok:passed:20130114-224502:1.413443333
 T_386flv_vp6f:a0ab8eb0dedf2c8c472e818794c2ad64:passed:20130121-223417:0.187881106
 T_387mp4_free_invalid_size:f3deb6abb3f60c0de606e166353a71b1:passed:20130216-003333:0.04107827
+T_388split_parts_and_chapters:e1bc3ec155ec33bca8eec967aceab25a-5969b6d3b83e87cb66f4ef576e03f3bf-04fa29b52eb8d4962edf4f010548b375:passed:20130216-203522:0.690018077
